fix: appstore's items alignements when running app

--- a/css/appstore.less
+++ b/css/appstore.less
@@ -102,6 +102,7 @@ div.appstore-window div.content-apps ul#appstore-applist {
   cursor: pointer;
   padding-bottom: 1.5%;
   padding-top: 1.5%;
+  overflow-y: hidden;
 }
 
 div.appstore-window div.content-apps ul#appstore-applist li:hover {
